--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -35,7 +35,7 @@
     <img class="logo" src="../assets/img/logo-300.png" alt="Logo EcoMarket" />
     <!-- NAVEGAÇÃO -->
     <ul>
-      <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
+      <li><a href="/index.html"><ion-icon name="home-outline"></ion-icon></a></li>
       <li>
       <!-- CARRINHO DE COMPRAS -->
         <div class="carrinho-icone">
@@ -128,12 +128,13 @@
 
   <!-- SCRIPTS -->
   <script src="../assets/js/vercel-analytics.js"></script>
-  <script type="module" src="../assets/js/perfil.js"></script>
+  <script type="module" src="../assets/js/pages/perfil.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script type="module" src="../assets/js/modules/feedback.js"></script>
+  <script type="module" src="../assets/js/modules/ui.js"></script>
   <script type="module" src="../assets/js/modules/config.js"></script>
   <script type="module" src="../assets/js/main.js"></script>
-  <script type="module" src="../assets/js/modules/produtos.js"></script>
+  <script type="module" src="../assets/js/pages/produtos.js"></script>
+  <script type="module" src="../assets/js/pages/perfil.js"></script>
 </body>
 </html>
