--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -14,7 +14,7 @@
   <!-- NOTIFICAÇÃO DE FEEDBACK -->
   <div id="feedback" class="feedback" aria-live="polite"></div>
   <header>
-    <a href="../paginas/home.html" title="Voltar para Home">
+    <a href="/index.html" title="Voltar para Home">
       <ion-icon name="home-outline"></ion-icon>
     </a>
   </header>
