--- a/paginas/finalizar-compra.html
+++ b/paginas/finalizar-compra.html
@@ -15,7 +15,7 @@
       <h1>Resumo do Pedido</h1>
       <!-- NAVEGAÇÃO -->
         <nav class="botoes-navegacao" aria-label="Navegação da página">
-          <a href="../paginas/home.html" class="btn-home" aria-label="Página inicial">
+          <a href="/index.html" class="btn-home" aria-label="Página inicial">
             <ion-icon name="home-outline"></ion-icon>
           </a>
           <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos" aria-label="Voltar à página de produtos">
@@ -105,8 +105,8 @@
       window.location.href = "produtos.html";
     }
   </script>
-  <script type="module" src="../assets/js/modules/feedback.js"></script>
-  <script type="module" src="../assets/js/modules/finalizar-pedido.js"></script>
+  <script type="module" src="../assets/js/modules/ui.js"></script>
+  <script type="module" src="../assets/js/pages/finalizar-pedido.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
