--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -55,8 +55,8 @@
   </div>
   <!-- SCRIPTS -->
   <script src="../assets/js/vercel-analytics.js"></script>
-  <script type="module" src="../assets/js/modules/feedback.js"></script>
-  <script type="module" src="../assets/js/modules/pedidos.js"></script>
+  <script type="module" src="../assets/js/modules/ui.js"></script>
+  <script type="module" src="../assets/js/pages/pedidos.js"></script>
   <script type="module" src="../assets/js/modules/config.js"></script>
   <script type="module" src="../assets/js/main.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
