--- a/paginas/informacoes.html
+++ b/paginas/informacoes.html
@@ -24,7 +24,7 @@
     <header>
         <img src="../assets/img/logo.png" alt="Logo EcoMarket">
         <ul>
-            <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
+            <li><a href="/index.html"><ion-icon name="home-outline"></ion-icon></a></li>
         </ul>
     </header>
     <main>
