--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -41,7 +41,7 @@
     <section aria-label="Formulário de cadastro">
       <div class="profile-pic" aria-hidden="true"><ion-icon name="person-outline"></ion-icon></div>
 
-      <form class="content" id="form-cadastro" action="../api/cadastro.js" method="post" aria-label="Cadastro de novo usuário">
+      <form class="content" id="form-cadastro" method="post" aria-label="Cadastro de novo usuário">
         <p>
           <label for="inome">Nome</label>
           <input type="text" name="nome" id="inome" required minlength="5" maxlength="40" autocomplete="name">
@@ -94,7 +94,8 @@
   <script src="../assets/js/vercel-analytics.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <script type="module" src="../assets/js/modules/feedback.js"></script>
-  <script src="../assets/js/auth.js"></script>
+  <script type="module" src="../assets/js/modules/utils.js"></script>
+  <script type="module" src="../assets/js/modules/ui.js"></script>
+  <script type="module" src="../assets/js/pages/auth.js"></script>
 </body>
 </html>
