refactor: Finaliza organização dos módulos de página.

--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -107,7 +107,7 @@
       </div>
     </form>
 
-    <section class="meus-produtos">
+    <section id="secao-meus-produtos" class="meus-produtos">
       <h2>Meus Produtos</h2>
       <div id="produtos-usuario">Carregando seus produtos...</div>
     </section>
