--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="./assets/css/home.css" />
     <link rel="stylesheet" href="./assets/css/carrinho.css">
+    <link rel="stylesheet" href="./assets/css/feedback.css">
 </head>
 <body>
     <!-- CABEÇALHO -->
