feat(vendedor): Adiciona sistema completo de gestão de pedidos na conta do vendedor
Implementa uma nova seção robusta de "Gestão de Pedidos" na página de conta do vendedor ('conta.html'), permitindo que vendedores visualizem, filtrem e gerenciem os pedidos recebidos de seus produtos.

Esta funcionalidade foi desenvolvida do zero e já inclui soluções para desafios complexos de UI assíncrona, garantindo uma experiência de usuário estável e profissional desde o seu lançamento.

**Funcionalidades Incluídas:**

1.  **Listagem e Paginação:**
    *   Exibe os pedidos do vendedor em uma lista paginada (10 por página).
    *   Inclui um botão "Carregar Mais" que funciona de forma confiável, adicionando novos pedidos à lista sem substituir os existentes.

2.  **Filtragem por Status:**
    *   Permite a filtragem de pedidos pelos status: Todos, Pendente, Em Andamento, Enviado, Entregue e Cancelado.
    *   A troca de filtros é protegida contra condições de corrida (race conditions) através do uso do `AbortController`, garantindo que apenas a solicitação mais recente seja exibida.

3.  **Atualização de Status:**
    *   Vendedores podem alterar o status de um pedido diretamente no card.
    *   A atualização é instantânea na interface, modificando o estado localmente sem a necessidade de um recarregamento completo da página, o que proporciona uma experiência de usuário fluida e eficiente.

4.  **Arquitetura de Código Limpa e Manutenível:**
    *   O código foi refatorado para seguir o Princípio da Responsabilidade Única.
    *   A lógica de criação do HTML dos cards foi isolada na função `criarCardPedidoHTML`, eliminando a duplicação de código e facilitando futuras manutenções.

5.  **Feedback de Usuário Contextual:**
    *   O sistema exibe mensagens de feedback inteligentes. Em vez de uma mensagem genérica, ele informa especificamente quando não há pedidos para um determinado filtro (ex: "Nenhum pedido com o status 'entregue'"), melhorando a clareza da comunicação.

Esta nova

--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -125,6 +125,30 @@
       <h2>Meus Produtos</h2>
       <div id="produtos-usuario">Carregando seus produtos...</div>
     </section>
+
+    <!-- CARD 4: PAINEL DE GESTÃO DE PEDIDOS -->
+    <section id="secao-gestao-pedidos" class="card-perfil" style="display: none;">
+      <h2>Gestão de Pedidos Recebidos</h2>
+      <p>Aqui estão os pedidos que contêm produtos seus. Você é responsável por entrar em contato com o comprador para combinar o pagamento e a entrega.</p>
+
+      <div id="filtros-pedidos-vendedor" class="filtros-container">
+        <button class="filtro-btn active" data-status="todos">Todos</button>
+        <button class="filtro-btn" data-status="pendente">Pendentes</button>
+        <button class="filtro-btn" data-status="em andamento">Em Andamento</button>
+        <button class="filtro-btn" data-status="enviado">Enviados</button>
+        <button class="filtro-btn" data-status="entregue">Entregues</button>
+        <button class="filtro-btn" data-status="cancelado">Cancelados</button>
+      </div>
+
+       <!-- O contêiner onde os cards de pedido serão renderizados -->
+      <div id="pedidos-vendedor-container">
+        <!-- O JavaScript vai renderizar os pedidos aqui -->
+      </div>
+
+      <div id="loader-pedidos-vendedor" class="loader-container-mais">
+        <button id="btn-carregar-mais-pedidos" class="btn-carregar-mais">Carregar Mais</button>
+      </div>
+    </section>
   </main>
 
   <!-- MODAL DE EXCLUSÃO -->
