--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -39,8 +39,12 @@
   </header>
 
   <main>
-    <section id="lista-pedidos">
+    <section class="fundo">
+      <h2>Pedidos Enviados</h2>
+      <p>Aqui estão os pedidos que você registrou, aguarde a resposta do vendedor para combinar o pagamento e entrega do(s) produto(s).</p>
+        <div id="lista-pedidos">
       <!-- Pedidos serão renderizados aqui pelo pedidos.js -->
+        </div>
     </section>
   </main>
 
